--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -33,4 +33,5 @@ a:visited {
   background-color: $teal;
   float: none !important;
   border-radius: 3vmin;
+  text-shadow: 1px 1px white;
 }
